// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MDTs /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="94133578-f505-4e76-b4ed-762462508801"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <MDTsDetail
          currentPanel="mdtsDetail"
          detail={
            Object {
              "dateOfMeeting": 1456258262000,
              "dateOfRequest": 1482170593395,
              "notes": "Investigations normal. Review in 3 weeks",
              "question": "Increasing back pain",
              "servicePageLink": "",
              "serviceTeam": "MDT Prostate Cancer team",
              "source": "ethercis",
              "sourceId": "94133578-f505-4e76-b4ed-762462508801",
              "timeOfMeeting": 72662000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="mdtsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="mdtsCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with mdtsDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="mdtsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="mdtsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="mdtsCreate"
          title="Create Create MDT"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with mdtsDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <ReduxForm
              isSubmit={false}
            />
          }
          currentPanel="mdtsCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="mdtsCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="mdtsCreate"
          title="Create Create MDT"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with mdtsPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="mdtsMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="mdtsMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Generic MDT"
          />
          <PluginMainPanel
            columnNameSortBy="dateOfRequest"
            emptyDataMessage="No MDTs"
            headers={
              Array [
                Object {
                  "key": "dateOfRequest",
                  "title": "Date of Request",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "serviceTeam",
                  "title": "Service / Team",
                  "width": "28%",
                },
                Object {
                  "key": "dateOfMeeting",
                  "title": "Date of Meeting",
                  "transformer": [Function],
                  "width": "28%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="94133578-f505-4e76-b4ed-762462508801"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="mdts"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <MDTsDetail
          currentPanel="mdtsDetail"
          detail={
            Object {
              "dateOfMeeting": 1456258262000,
              "dateOfRequest": 1482170593395,
              "notes": "Investigations normal. Review in 3 weeks",
              "question": "Increasing back pain",
              "servicePageLink": "",
              "serviceTeam": "MDT Prostate Cancer team",
              "source": "ethercis",
              "sourceId": "94133578-f505-4e76-b4ed-762462508801",
              "timeOfMeeting": 72662000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="mdtsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="mdtsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with mdtsPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <MDTsDetail
          currentPanel="mdtsDetail"
          detail={
            Object {
              "dateOfMeeting": 1456258262000,
              "dateOfRequest": 1482170593395,
              "notes": "Investigations normal. Review in 3 weeks",
              "question": "Increasing back pain",
              "servicePageLink": "",
              "serviceTeam": "MDT Prostate Cancer team",
              "source": "ethercis",
              "sourceId": "94133578-f505-4e76-b4ed-762462508801",
              "timeOfMeeting": 72662000,
            }
          }
          editedPanel={Object {}}
          expandedPanel="mdtsPanel"
          isSubmit={false}
          name="mdtsDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="mdtsPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <MDTs /> should renders correctly with mdtsPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;
